1998-12-31  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* simtoolsgui.h (ActionCache, GUISwarm): Declare -drop.

	* GUISwarm.[hm] ([GUISwarm -drop]): New method.

	* ActionCache.[hm] ([ActionCache -drop]): New method.

1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* MessageProbeWidget.m: Don't include ctype.h.

1998-12-18  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* MultiVarProbeWidget.m ([MultiProbe -setCompareFunction:]): 
	Return self.

1998-11-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* simtoolsgui.m: Include defobj.h instead of objectbase/Arguments.h.

	* ControlPanel.m: Include defobj.h instead of simtools/Archiver.h.

	* ActionCache.m: Include defobj.h instead of objectbase/Arguments.h
	and simtools/Archiver.h (the latter wasn't needed, anyway).

1998-10-27  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* MessageProbeWidget.m (printVal): Handle void return case.

1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT, AGE): Increment.  Swarm 1.3.1 released.

	* ActionCache.m ([ActionCache -deliverActions]): Use %lu instead of %u.

	* ActionCache.m ([ActionCache -createProcCtl]): Set geometry of
	ButtonPanel here.

1998-09-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* CommonProbeDisplay.m ([CommonProbeDisplay -install]): Use 
	Canvas checkGeometry: instead of Frame assertGeometry.
	
	* CompleteProbeDisplay.m ([CompleteProbeDisplay -do_resize]): Likewise.

1998-09-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* CommonProbeDisplay.m ([CommonProbeDisplay -createEnd]): 
	Use addWidget:X:Y:centerFlag on canvas instead of assertPosition
	on frame.

1998-09-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* SimpleProbeDisplay.m ([SimpleProbeDisplay -createEnd]): Use
	setTargetWidget: instead of setProbeDisplay:

	* MultiVarProbeDisplay.m ([MultiVarProbeDisplay -createEnd]): Likewise.

	* MultiVarProbeDisplay.m ([MultiVarProbeDisplay -createEnd]): Remove 
	call to setProbeDisplayManager.
