@@ -1,3 +1,11 @@
+1999-01-14  Alex Lancaster  <alex@santafe.edu>
+
+	* MessageProbeWidget.m (printVal): When return from message probe
+	is an unsigned char (_C_UCHR), print the octal value.  If the
+	unsigned char is the special case of Boolean YES or NO value,
+	print the octal character followed by the YES or NO in
+	parentheses.
+
 1998-12-31  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* simtoolsgui.h (ActionCache, GUISwarm): Declare -drop.
